==> gjianw217/MoonIC2/stm32f407_net/drivers/gpio.c <==
#include <rthw.h>
#include <rtdevice.h>
#include <board.h>
#include <gpio.h>
#define ITEM_NUM(items) sizeof(items)/sizeof(items[0])

void stm32_pin_write(rt_device_t dev, rt_base_t pin, rt_base_t value)
{
    const struct pin_index *index;

    index = get_pin(pin);
    if (index == RT_NULL)
    {
        return;
    }

    if (value == PIN_LOW)
    {
        GPIO_ResetBits(index->gpio, index->pin);
    }
    else
    {
        GPIO_SetBits(index->gpio, index->pin);
    }
}

int stm32_pin_read(rt_device_t dev, rt_base_t pin)
{
    int value;
    const struct pin_index *index;

    value = PIN_LOW;

    index = get_pin(pin);
    if (index == RT_NULL)
    {
        return value;
    }

    if (GPIO_ReadInputDataBit(index->gpio, index->pin) == Bit_RESET)
    {
        value = PIN_LOW;
    }
    else
    {
        value = PIN_HIGH;
    }

    return value;
}

void stm32_pin_mode(rt_device_t dev, rt_base_t pin, rt_base_t mode)
{
    const struct pin_index *index;
    GPIO_InitTypeDef  GPIO_InitStructure;

    index = get_pin(pin);
    if (index == RT_NULL)
    {
        return;
    }

    /* GPIO Periph clock enable */
    RCC_AHB1PeriphClockCmd(index->rcc, ENABLE);

    /* Configure GPIO_InitStructure */
    GPIO_InitStructure.GPIO_Pin     = index->pin;
    GPIO_InitStructure.GPIO_OType   = GPIO_OType_PP;
    GPIO_InitStructure.GPIO_Speed   = GPIO_Speed_25MHz;

    if (mode == PIN_MODE_OUTPUT)
    {
        /* output setting */
        GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
        GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
    }
    else if (mode == PIN_MODE_INPUT)
    {
        /* input setting: not pull. */
        GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN;
        GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
    }
    else if (mode == PIN_MODE_INPUT_PULLUP)
    {
        /* input setting: pull up. */
        GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN;
        GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
    } 
    else
    {
        /* input setting:default. */
        GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN;
        GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_DOWN;
    }
    GPIO_Init(index->gpio, &GPIO_InitStructure);
}

void EXTI0_IRQHandler(void)
{
	 EXTI_ClearITPendingBit(EXTI_Line0);
	 if(pin_irq_hander[0].hander!=0)
			pin_irq_hander[0].hander(pin_irq_hander[0].para);
	
}

void EXTI1_IRQHandler(void)
{
	EXTI_ClearITPendingBit(EXTI_Line1);
	if(pin_irq_hander[1].hander!=0)
			pin_irq_hander[1].hander(pin_irq_hander[1].para);
}

void EXTI2_IRQHandler(void){
	EXTI_ClearITPendingBit(EXTI_Line2);
		if(pin_irq_hander[2].hander!=0)
			pin_irq_hander[2].hander(pin_irq_hander[2].para);
}

void EXTI3_IRQHandler(void){
	EXTI_ClearITPendingBit(EXTI_Line3);
		if(pin_irq_hander[3].hander!=0)
			pin_irq_hander[3].hander(pin_irq_hander[3].para);
}

void EXTI4_IRQHandler(void){
 EXTI_ClearITPendingBit(EXTI_Line4);
			if(pin_irq_hander[4].hander!=0)
			pin_irq_hander[4].hander(pin_irq_hander[4].para);
}

void EXTI9_5_IRQHandler(void){
	if(EXTI_GetITStatus(EXTI_Line5)==SET)
	{
		EXTI_ClearITPendingBit(EXTI_Line5);
		if(pin_irq_hander[5].hander!=0)
			pin_irq_hander[5].hander(pin_irq_hander[5].para);
	}
	if(EXTI_GetITStatus(EXTI_Line6)==SET)
	{
		EXTI_ClearITPendingBit(EXTI_Line6);
		if(pin_irq_hander[6].hander!=0)
			pin_irq_hander[6].hander(pin_irq_hander[6].para);
	}
	if(EXTI_GetITStatus(EXTI_Line7)==SET)
	{
		EXTI_ClearITPendingBit(EXTI_Line7);
		if(pin_irq_hander[7].hander!=0)
			pin_irq_hander[7].hander(pin_irq_hander[7].para);
	}
	if(EXTI_GetITStatus(EXTI_Line8)==SET)
	{
		EXTI_ClearITPendingBit(EXTI_Line8);
		if(pin_irq_hander[8].hander!=0)
			pin_irq_hander[8].hander(pin_irq_hander[8].para);
	}
	if(EXTI_GetITStatus(EXTI_Line9)==SET)
	{
		EXTI_ClearITPendingBit(EXTI_Line9);
		if(pin_irq_hander[9].hander!=0)
			pin_irq_hander[9].hander(pin_irq_hander[9].para);
	}

}

void EXTI15_10_IRQHandler(void){
	if(EXTI_GetITStatus(EXTI_Line10)==SET)
	{
		EXTI_ClearITPendingBit(EXTI_Line10);
		if(pin_irq_hander[10].hander!=0)
			pin_irq_hander[10].hander(pin_irq_hander[10].para);
	}
	if(EXTI_GetITStatus(EXTI_Line11)==SET)
	{
		EXTI_ClearITPendingBit(EXTI_Line11);
		if(pin_irq_hander[11].hander!=0)
			pin_irq_hander[11].hander(pin_irq_hander[11].para);
	}
	if(EXTI_GetITStatus(EXTI_Line12)==SET)
	{
		EXTI_ClearITPendingBit(EXTI_Line12);
		if(pin_irq_hander[12].hander!=0)
			pin_irq_hander[12].hander(pin_irq_hander[12].para);
	}
	if(EXTI_GetITStatus(EXTI_Line13)==SET)
	{
		EXTI_ClearITPendingBit(EXTI_Line13);
		if(pin_irq_hander[13].hander!=0)
			pin_irq_hander[13].hander(pin_irq_hander[13].para);
	}
	if(EXTI_GetITStatus(EXTI_Line14)==SET)
	{
		EXTI_ClearITPendingBit(EXTI_Line14);
		if(pin_irq_hander[14].hander!=0)
			pin_irq_hander[14].hander(pin_irq_hander[14].para);
	}
	if(EXTI_GetITStatus(EXTI_Line15)==SET)
	{
		EXTI_ClearITPendingBit(EXTI_Line15);
		if(pin_irq_hander[15].hander!=0)
			pin_irq_hander[15].hander(pin_irq_hander[15].para);
	}
}
